RESOLVED FIXED273421
[Unified Text Replacement] Attributed string conversion introduces unexpected newlines
https://bugs.webkit.org/show_bug.cgi?id=273421
Summary [Unified Text Replacement] Attributed string conversion introduces unexpected...
Aditya Keerthi
Reported 2024-04-29 11:24:46 PDT
Attachments
Aditya Keerthi
Comment 1 2024-04-29 11:33:41 PDT
EWS
Comment 2 2024-04-29 17:59:37 PDT
Committed 278141@main (b4139ed0097c): <https://commits.webkit.org/278141@main> Reviewed commits have been landed. Closing PR #27885 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.