[Unified Text Replacement] Attributed string conversion introduces unexpected newlines https://bugs.webkit.org/show_bug.cgi?id=273421 rdar://126644154

Reviewed by Ryosuke Niwa.

Set "InterchangeNewlines" to `NO` for unified text replacement.

Introduce `FragmentCreationOptions` to control behavior.

* Source/WebCore/editing/WebContentReader.h:
(WebCore::createFragment):
* Source/WebCore/editing/cocoa/EditorCocoa.mm:
(WebCore::Editor::replaceSelectionWithAttributedString):
* Source/WebCore/editing/cocoa/WebContentReaderCocoa.mm:
(WebCore::createFragmentInternal):
(WebCore::attributesForAttributedStringConversion):
(WebCore::createFragment):
(WebCore::WebContentReader::readRTFD):
(WebCore::WebContentMarkupReader::readRTFD):
(WebCore::WebContentReader::readRTF):
(WebCore::WebContentMarkupReader::readRTF):
* Source/WebKit/WebProcess/WebPage/Cocoa/UnifiedTextReplacementController.mm:
(WebKit::UnifiedTextReplacementController::textReplacementSessionDidReceiveTextWithReplacementRange):

Canonical link: https://commits.webkit.org/278141@main